Try to fix the z-index issue in some Android devices.

--- a/less/hero.less
+++ b/less/hero.less
@@ -54,7 +54,7 @@
 		left: 0;
 		width: 100%;
 		height: (480vw/720*100);
-		transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 100em);
 		
 		img {
 			width: 100%;
